--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ dist: trusty
 language: python
 before_install:
   - sudo apt-get install -y $DEPS
+  - sudo pip install coveralls
 install: "pip install -r requirements-dev.txt"
 script: python setup.py test --addopts '--cov vadvisor'
 matrix:
@@ -11,4 +12,5 @@ matrix:
       env: DEPS="pkg-config python-dev libvirt-dev"
     - python: "3.4"
       env: DEPS="pkg-config libvirt-dev python3-dev"
-
+after_success:
+    - coveralls
